# basic-to-mindustry

./: Cargo.toml  GUIDE.md  LICENSE  README.md
examples/: collatz.mbas  control.mbas  counter.mbas  difficulty.mbas  fizzbuzz.basic  gosub-advanced.mbas  gosub.mbas  prime.mbas  procedural-waves.basic  procedural-waves.mbas  reactor-safety.mbas  sensor.mbas  world-print.mbas
minbasic-vscode/: .gitignore  .vscodeignore  README.md  package.json
minbasic-vscode/syntaxes/: minbasic.tmLanguage.json
src/: common.rs  config.rs  cursor.rs  lib.rs  main.rs
src/compile/: mod.rs  optimize.rs
src/compile/optimize/: constant.rs  dead.rs  jump.rs  lookaround.rs  mod.rs  replace.rs
src/config/: builtin_function.rs  mod.rs
src/interpreter/: mod.rs  test.rs
src/optimize/: constant.rs  dead.rs  jump.rs  lookaround.rs  mod.rs  replace.rs
src/parse/: ast.rs  mod.rs  test.rs  tokenize.rs
src/repr/: basic.rs  mlog.rs  mod.rs  operator.rs  position.rs
src/translate/: display.rs  mod.rs
tests/: common.rs  examples.rs  run.rs
tests/examples/: collatz.0.mlog  collatz.1.mlog  control.0.mlog  control.1.mlog  counter.0.mlog  counter.1.mlog  fizzbuzz.0.mlog  fizzbuzz.1.mlog  gosub.0.mlog  gosub.1.mlog  procedural-waves.0.mlog  procedural-waves.1.mlog  sensor.0.mlog  sensor.1.mlog  world-print.0.mlog  world-print.1.mlog
tests/print-success/: for-loop.mbas  gosub.mbas  identity.mbas  if-jump.mbas  if-then-else.mbas  while-loop.mbas
