[package]
name = "basic-to-mindustry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = { version = "3.2.1", features = [] }
clap = { version = "4.4.6", features = ["derive"] }
rand = "0.8.5"
regex = "1.9.5"

[dev-dependencies]
pretty_assertions = "1.4.0"
